--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
           <div class="small" style="margin-top:4px">
             Cash: <span class="number" data-editable>$<span data-field="cash">${p.cash}</span></span>
           </div>
+          <div class=\"small\">Kills: ${p.kills ?? 0}</div>
           <div class="flex actions" style="margin-top:6px">
             <button class="btn" data-cash="+100">+100</button>
             <button class="btn" data-cash="-100">-100</button>
@@ -467,7 +468,15 @@
           /* Cash +/- */
           if(btn.dataset.cash){ const delta=parseInt(btn.dataset.cash)||0; player.cash=Math.max(0, player.cash+delta); saveLocal(); logEvent(`${player.name} cash ${delta>0?'+':''}${delta}`); pushPlayer(player); render(); return; }
           /* Kill gives reward */
-          if(btn.hasAttribute('data-kill')){ player.cash+=state.rewards.kill; saveLocal(); logEvent(`${player.name} scored a kill (+$${state.rewards.kill})`); pushPlayer(player); render(); return; }
+          if(btn.hasAttribute('data-kill')){
+      player.cash += state.rewards.kill;
+      player.kills = (player.kills ?? 0) + 1;
+      saveLocal();
+      logEvent(`${player.name} scored a kill (+$${state.rewards.kill}) — total kills: ${player.kills}`);
+      pushPlayer(player);
+      render();
+      return;
+    }
 
           /* Death: save lastWeapon and mark dead */
           if(btn.hasAttribute('data-death')){ if(!player.dead){ player.lastWeapon = player.weapon; player.dead=true; saveLocal(); logEvent(`${player.name} died`); pushPlayer(player); render(); } return; }
@@ -705,6 +714,7 @@
           </div>
           <div class="flex" style="justify-content:center;width:100%"><span style="font-weight:700">${data.name||'Player'}</span></div>
           <div class="cash-big">$${data.cash??0}</div>
+    <div class="small">Kills: ${data.kills ?? 0}</div>
           <div class="small">Weapon: ${data.weapon||'Starter'}</div>
           ${data.dead?'<div class="badge dead" style="margin-top:6px">⚰ Dead</div>':''}
           ${data.benched?'<div class="badge benched" style="margin-top:6px">Benched</div>':''}
@@ -772,7 +782,7 @@
       if(!fb.enabled) return;
       try{
         const {db, doc, setDoc} = window.__fb;
-        const data = { name:p.name, cash:p.cash, weapon:p.weapon, dead:p.dead, benched:p.benched };
+        const data = { name:p.name, cash:p.cash, weapon:p.weapon, dead:p.dead, benched:p.benched, kills:p.kills ?? 0 };
         await setDoc(doc(db,'players', p.id), data, {merge:true});
       }catch(e){ /* ignore */ }
     }
@@ -815,26 +825,24 @@
         });
       }catch(e){ /* ignore */ }
     }
-    function handleBuyRequest(pid, data) {
-  const found = findPlayer(pid);
-  if (!found) return;
-  const { team, player } = found;
-  const cost = parseInt(data.cost) || 0;
-
-  // Log request in Event Log
-  logEvent(`🛒 ${player.name} requests ${data.weapon} for $${cost}`);
-
-  // Add inline Approve/Deny buttons
-  const logEl = document.createElement('div');
-  logEl.innerHTML = `
-    <div style="margin:4px 0;padding:6px;border:1px solid #333;border-radius:6px">
-      <strong>${player.name}</strong> wants <em>${data.weapon}</em> ($${cost})<br>
-      <button class="btn success" data-approve="${pid}:${data.weapon}:${cost}">Approve</button>
-      <button class="btn danger" data-deny="${pid}">Deny</button>
-    </div>
-  `;
-  document.querySelector('#eventLog').prepend(logEl);
-}
+    function handleBuyRequest(pid, data){
+      const found = findPlayer(pid); if(!found) return;
+      const {team, player} = found;
+      const cost = parseInt(data.cost)||0;
+      const ok = confirm(`${player.name} requests ${data.weapon} for $${cost}. Approve?`);
+      const approve = ok && player.cash >= cost;
+      if(ok && player.cash < cost){ alert('Not enough cash'); }
+      if(approve){
+        player.cash -= cost;
+        player.weapon = data.weapon;
+    player.kills = data.kills ?? player.kills ?? 0;
+        saveLocal(); logEvent(`${player.name} bought ${data.weapon} (-$${cost}) via request`);
+        pushPlayer(player); render();
+        updateRequestStatus(pid, 'approved');
+      } else if(ok){
+        updateRequestStatus(pid, 'denied');
+      }
+    }
     async function updateRequestStatus(pid, status){
       if(!fb.enabled) return;
       try{
@@ -853,61 +861,20 @@
     }
 
     function applyPlayerData(pid, data){
-      hudCache[pid] = { name:data.name, cash:data.cash, weapon:data.weapon, dead:data.dead, benched:data.benched };
+      hudCache[pid] = { name:data.name, cash:data.cash, weapon:data.weapon, dead:data.dead, benched:data.benched, kills:data.kills ?? 0 };
       const {player} = findPlayer(pid) || {};
       if(player){
         player.name = data.name;
         player.cash = data.cash;
         player.weapon = data.weapon;
+    player.kills = data.kills ?? player.kills ?? 0;
         player.dead = data.dead;
         player.benched = data.benched;
         saveLocal();
       }
     }
 
-    
-/* Approve / Deny buy requests from Event Log */
-document.addEventListener('click', (e) => {
-  const btn = e.target.closest('button');
-  if (!btn) return;
-
-  if (btn.dataset.approve) {
-    const [pid, weapon, cost] = btn.dataset.approve.split(':');
-    const found = findPlayer(pid);
-    if (!found) return;
-    const { player } = found;
-    const c = parseInt(cost) || 0;
-
-    if (player.cash < c) {
-      toast("Not enough cash to approve");
-      updateRequestStatus(pid, 'denied');
-      btn.parentElement.remove();
-      return;
-    }
-
-    player.cash -= c;
-    player.weapon = weapon;
-    saveLocal();
-    logEvent(`✔ Approved: ${player.name} bought ${weapon} (-$${c})`);
-    pushPlayer(player);
-    render();
-    updateRequestStatus(pid, 'approved');
-    btn.parentElement.remove();
-  }
-
-  if (btn.dataset.deny) {
-    const pid = btn.dataset.deny;
-    const found = findPlayer(pid);
-    if (!found) return;
-    const { player } = found;
-    logEvent(`❌ Denied: ${player.name}'s request`);
-    updateRequestStatus(pid, 'denied');
-    btn.parentElement.remove();
-  }
-});
-
-
-/* =============================
+    /* =============================
        Boot
     ==============================*/
     function boot(){
